[package]
name = "bufstream"
version = "0.1.4"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/bufstream"
homepage = "https://github.com/alexcrichton/bufstream"
documentation = "https://docs.rs/bufstream"
description = """
Buffered I/O for streams where each read/write half is separately buffered
"""

[dependencies.futures]
optional = true
version = "0.1.13"

[dependencies.tokio-io]
optional = true
version = "0.1.1"

[features]
default = []
tokio = ["futures", "tokio-io"]
